<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="4dp" android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp" android:layout_marginBottom="4dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/ItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/NameItem"
                    android:ems="10"
                    android:id="@+id/nameEditText" android:layout_weight="1" android:importantForAutofill="no"
                    android:hint="@string/NameItem"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/CountName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_weight="1"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/NameCount"
                    android:ems="10"
                    android:id="@+id/countEditText" android:layout_weight="1" android:importantForAutofill="no"
                    android:hint="@string/NameCount"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/PriceName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="1"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@string/NamePrice"
                    android:ems="10"
                    android:id="@+id/priceEditText" android:layout_weight="1" android:hint="@string/NamePrice"
                    android:autofillHints=""/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>